# clicker

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
docs/superpowers/plans/: 2026-06-04-clicker.md  2026-06-21-clicker-v2.md
docs/superpowers/specs/: 2026-06-04-clicker-design.md  2026-06-21-clicker-v2-design.md
src/: app.rs  cert.rs  config.rs  discovery.rs  framing.rs  keymap.rs  main.rs  pairing.rs  proto.rs  remote.rs  theme.rs  tls.rs  types.rs
src/ui/: body.rs  footer.rs  header.rs  mod.rs  modal.rs
