# /home/jane/projects/clicker/Cargo.toml
[package]
name = "clicker"
version = "0.1.0"
edition = "2021"
description = "A terminal Android TV remote, native to the Rust TUI suite."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = { version = "0.14", features = ["pem"] }
rsa = "0.9"
prost = "0.13"
sha2 = "0.10"
x509-parser = "0.16"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
suite-term = { git = "https://github.com/JaneAdora/suite-term", rev = "eec40bcd1516156d5245ef73aeb4a5aef243d497", features = ["clipboard", "panic-hook"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
futures = "0.3"
num-bigint-dig = "0.8"
rand = "0.8"
hex = "0.4"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
