# /home/jane/projects/clicker/Cargo.toml
[package]
name = "clicker"
version = "0.1.0"
edition = "2021"
description = "A terminal Android TV / Google TV remote speaking the native Remote protocol v2."
license = "MIT OR Apache-2.0"
repository = "https://github.com/JaneAdora/clicker"
readme = "README.md"
keywords = ["android-tv", "google-tv", "remote", "tui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
# Use the `ring` crypto provider (not the default aws-lc-rs) so the build needs only
# a C toolchain — no cmake. rcgen already uses ring, so this drops aws-lc-sys entirely.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rcgen = { version = "0.14", features = ["pem"] }
rsa = "0.9"
prost = "0.13"
sha2 = "0.10"
x509-parser = "0.16"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
suite-term = { git = "https://github.com/JaneAdora/suite-term", rev = "eec40bcd1516156d5245ef73aeb4a5aef243d497", features = ["clipboard", "panic-hook"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
futures = "0.3"
num-bigint-dig = "0.8"
rand = "0.8"
hex = "0.4"
# Pure-Rust mDNS (no system deps) for Android TV discovery (_androidtvremote2._tcp).
mdns-sd = "0.11"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
